crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_unicode_char_non_bmp.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
'🐘'
TOKENS:
CHAR_LITERAL "'🐘'"
EOF ""

LEX_ERRORS:
LexicalError { kind: InvalidChar, range: 0..6 }
