crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_unterminated_comment.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
/* this block comment never ends 
TOKENS:
BLOCK_COMMENT "/* this block comment never ends "

LEX_ERRORS:
LexicalError { kind: UnterminatedComment, at_offset: 0 }
