crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_unterminated_string_newline.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
"line1
line2"
TOKENS:
WHITESPACE "\n"
IDENTIFIER "line2"

LEX_ERRORS:
LexicalError { kind: UnterminatedString, at_offset: 0 }
LexicalError { kind: UnterminatedString, at_offset: 12 }
