crates/java-syntax/tests/snapshots/lexer_snapshots__lex_escape_sequence_s_string.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
 "trailing space\s" 
TOKENS:
WHITESPACE " "
STRING_LIT "\"trailing space\\s\""
WHITESPACE " "

LEX_ERRORS:
<none>
