crates/java-syntax/tests/snapshots/lexer_snapshots__lex_floating_point_literals_decimal.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
1.23 .5 10. 3.14f 6.022e23 1e-9d
TOKENS:
FLOAT_LITERAL "1.23"
WHITESPACE " "
FLOAT_LITERAL ".5"
WHITESPACE " "
FLOAT_LITERAL "10."
WHITESPACE " "
FLOAT_LITERAL "3.14f"
WHITESPACE " "
FLOAT_LITERAL "6.022e23"
WHITESPACE " "
FLOAT_LITERAL "1e-9d"

LEX_ERRORS:
<none>
