crates/java-syntax/tests/snapshots/lexer_snapshots__lex_incomplete_ellipsis.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
..

TOKENS:
DOT "."
DOT "."
WHITESPACE "\n"

LEX_ERRORS:
<none>
